crates/monochange/src/__tests__/snapshots/monochange__lint__tests__format_check_report_with_issues.snap
---
source: crates/monochange/src/__tests__/lint_tests.rs
expression: output
---
✖ Checks failed · 1 error · 1 warning

test.toml
  1:1  ✖ Test error
         test/rule
         severity error
  2:1  ▲ Test warning
         test/rule
         severity warning
